# moody

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
flower/: Dockerfile
src/base/: celery.py  urls.py
src/base/docker/: Dockerfile
src/base/settings/: base.py  dev.py  prod.py
src/comments_analyzer/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
src/comments_analyzer/migrations/: 0001_initial.py  0002_analysissession_rename_video_youtubevideo_and_more.py  0003_youtubecomment_processed.py
